Added animations to TitleActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <!--TitleActivity-->
     <string name="title">Trevor Holmes</string>
-    <string name="subtitle">Digital portfolio</string>
+    <string name="subtitle">Digital Gallery</string>
     <string name="titlebutton">Begin</string>
 
 </resources>
