Changed app icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PortfolioApp</string>
+    <string name="app_name">Trevor\'s Gallery</string>
 
     <!--TitleActivity-->
     <string name="title">Trevor Holmes</string>
