Began creation of ListView to hold art categories.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="subtitle">Digital Gallery</string>
     <string name="titlebutton">Begin</string>
 
+    <!--MenuActivity-->
+
+    <!--menu_item.xml-->
+    <string name="placeholder_text">I am a placeholder</string>
+
 </resources>
