Created an artworks.xml file to hold descriptions of each work.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
 
 
     <!--MenuActivity-->
+    <string name="bioTitle"></string>
+    <string name="bioParagraph1"></string>
+    <string name="bioParagraph2"></string>
 
     <!--menu_item.xml-->
 
